			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04f: *********************************

IMP: (2/25/06, GVG) GDS numbers associated to foundry instead of the technology.

BUG: (2/24/06, DN) "Class exception in Undo" (Bug #831)
FIX: Correct condition for "full" case in "Cell.undo" .

BUG: (2/24/06, SMR) "Save As" fails (Bug #827)
FIX: Use local variables (not Library flags) to determine whether to prompt for a file.

BUG: (2/24/06, SMR) Mouse-over highlighting is gone (Bug #828)
FIX: In ClickZoomWireListener.mouseOver(), add a window repaint after updating highlights.

BUG: (2/24/06) Node extraction crashes after undo.
FIX: In EDatabase.undo and EThread.run .

BUG: (2/23/06) Undo after crash can crash too.
FIX: Add parameter "full" to EDatabase.undo . In "full" mode undo doesn't rely of
     EDatabase correctness.

IMP: (2/23/06) LibraryReaders doen't try to repair arcs ends. They start RapairJob instead.
     RepairJob detects bad arc end and reports them to constraint system. Repair step is undoable.
     IO regressions scripts were modifed to changed number of repair errors.

BUG: (2/23/06, DN) Redisplay slow.
FIX: In User.endBatch calls wnd.redisplayContents only most once per Window.

BUG: (2/23/06, SMR) Auto-routing is very slow (Bug #510)
FIX: Now using quad-trees in auto-routing.

BUG: (2/23/06, DN) Library is not marked as changed after deleting a cell (Bug #826).
FIX: Put "lib.setCHANGED()" IN "CELL.KILL()".

BUG: (2/23/06, DN) For Jobs started on server result is not serialized (Bug #824, #825).
FIX: Remove "else" in Client.EJobEvent.run method.

IMP: (2/22/06, SMR) Changed the basic GRID unit (in DBMath.java) from 100 to 400
     to allow smaller fractions, and especially half, quarter, etc. (can now handle 1/16).

************************* Version 8.04e: *********************************
